Ajout de maven. Note : le jar auto généré n'est pas executable pour le moment

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Before next Impl :
+* hashCode et equals dans Company !
 
 Opt mais important: 
 * Exception de la couche Service, a catch dans la presentation pour savoir si success (à la place de booléen)
