--- a/TODO
+++ b/TODO
@@ -3,6 +3,14 @@ Before next Impl :
 Opt mais important: 
 * Exception de la couche Service, a catch dans la presentation pour savoir si success (à la place de booléen)
 * Jar généré par maven executable et fonctionnel !
+* Library scope, properties (version number)
+* Unit test coverage
 
 Opt :
 * une classe Secureinput qui vérifie lesdits inputs
+
+
+Big Step :
+* Unit testing
+* Web
+* Multiple point
