--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
 Before next Impl :
-* test service ?
+* test presentation ?
 
 Opt mais important: 
 * Exception de la couche Service, a catch dans la presentation pour savoir si success (à la place de booléen)
-* Jar généré par maven executable et fonctionnel !
 * Unit test coverage
 
 Opt :
