fonctionnalité de pagination ajoutée

--- a/TODO
+++ b/TODO
@@ -1,21 +1,19 @@
 WIP :
-* Dashboard, what is pagination exactly ?
 * Exception de la couche Service, a catch dans la presentation pour savoir si success (à la place de booléen)
 * add computer, interactif avant validation, et affiché l'erreur après validation
-* page de deleteComputer
-* Liste des companies dans ajout/edit computer
 
 Before next Impl :
 * Error.html => .jsp inclusion dynamique css, à changer dans le web.xml
 
 Opt mais important: 
 * num version jstl en parameter (??)
-* Unit test coverage
+* Limiter le nombre de page accessible via lien en fonction du nombre max. Page 1/Last.
 
 Opt :
 * une classe Secureinput qui vérifie lesdits inputs
 * bug icône delete en mode edit sur le dashboard (ok sous eclipse, nok war)
 * <c:out ..></c:out> à diminuer
+* Unit test coverage
 * Uniformiser la langue des javadocs
 
 
