--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 WIP :
 * add computer, interactif avant validation.
+* remettre des logger dans la couche de service
 
 Before next Impl :
 * Error.html => .jsp inclusion dynamique css, à changer dans le web.xml
@@ -14,7 +15,7 @@ Opt :
 * <c:out ..></c:out> à diminuer
 * Unit test coverage
 * Uniformiser la langue des javadocs
-
+* Optional<Computer> ??
 
 Big Step :
 * Web - WIP
