--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 WIP :
+* Selenium
 
 Before next Impl :
 
@@ -7,11 +8,8 @@ Opt mais important:
 
 Opt :
 * une classe Secureinput qui vérifie lesdits inputs
-* bug icône delete en mode edit sur le dashboard (ok sous eclipse, nok war)
 * Unit test coverage
-* Uniformiser la langue des javadocs
 * Optional<Computer> ??
 
 Big Step :
-* Web - WIP
 * Multiple point
