REFACTO presentation 'required' name computer & condition order

--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
+Refacto :
+* Page.java, enlever la généricité
+* 1 obj / couche
+* dtos dans jsp
+* Optional
+* try with resources
+* * dans requête SQL
+* code en double dans create et update SQL
+
 WIP :
 
 Before next Impl :
@@ -7,7 +16,6 @@ Opt mais important:
 Opt :
 * une classe Secureinput qui vérifie lesdits inputs
 * Unit test coverage
-* Optional<Computer> ??
 
 Big Step :
 * Multiple point
