--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 WIP :
+* JS, quand boutons edit/validate trigger fonctionnalité 10,50,100 => y ajouter une classe spé
+* recherche, bouton buggé
 
 Before next Impl :
 
