--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 WIP :
 * JS, quand boutons edit/validate trigger fonctionnalité 10,50,100 => y ajouter une classe spé
 * recherche, bouton buggé
+* congé hellfest
 
 Before next Impl :
 
