Fixed (some) Tests. Order by not operationnal

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 WIP :
 * Internationnalisation pour les dates
-* @Valid not done (errors management)
+* Tri des ordinateurs non fonctionnel
 
 Before next Impl :
 
