Utilisation de spring security pour l'authentification, avec hash des mots de passes. Ré-ajout des dockerfiles

--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 WIP :
 
 Before next Impl :
+* Internationalisation login
+* Test selenium à remettre opérationnels
+* Internationalisation Erreurs
 
 Opt mais important: 
 * Internationnalisation pour les dates
