multilangage & selenium ok (pas avec Cargo)

--- a/ComputerDatabase-webapp/src/main/resources/language_en.properties
+++ b/ComputerDatabase-webapp/src/main/resources/language_en.properties
@@ -15,3 +15,9 @@ computer.introduced=Introduced date
 computer.discontinued=Discontinued date
 computer.company=Manufacturer
 company.name=Manufacturer name
+
+login.loginPage=Login page
+login.user=User
+login.password=Password
+login.logout=Logout
+login.login=Log in
