--- a/ComputerDatabase-webapp/src/main/resources/language_fr.properties
+++ b/ComputerDatabase-webapp/src/main/resources/language_fr.properties
@@ -15,3 +15,9 @@ computer.introduced=Date de mise en service
 computer.discontinued=Date de sortie de service
 computer.company=Fabricant
 company.name=Nom du Fabricant
+
+login.loginPage=Page d'authentification
+login.user=Utilisateur
+login.password=Mot de passe
+login.logout=Se d\u00e9connecter
+login.login=Se connecter
