--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 WIP :
 
 Before next Impl :
-* Internationalisation login
 * Test selenium à remettre opérationnels
+* Register
 * Internationalisation Erreurs
 
 Opt mais important: 
