--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 WIP :
 
 Before next Impl :
-* Test selenium à remettre opérationnels
 * Register
+* Internationalisation register
 * Internationalisation Erreurs
 
 Opt mais important: 
